fixed collapsed styling in scss module

--- a/src/components/Molecules/Core/Accordion/Accordion.module.scss
+++ b/src/components/Molecules/Core/Accordion/Accordion.module.scss
@@ -4,12 +4,12 @@
   background-color: $color-brand-primary-600;
   color: $color-grey-100;
 
-  &.collapsed {
+  &:global(.collapsed) {
     background-color: $color-brand-primary-500;
     color: $color-grey-100;
   }
 
-  &:not(.collapsed) {
+  &:global(:not(.collapsed)) {
     background-color: $color-brand-primary-600;
     color: $color-grey-100;
   }
